manifests/appservice-slack/03-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"appservice-slack:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"appservice-slack\")].image"}
      ]
  labels:
    app: synapse
    service: appservice-slack
  name: appservice-slack
  namespace: matrix
spec:
  replicas: 1
  selector:
    deploymentconfig: appservice-slack
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synapse
        service: appservice-slack
        deploymentconfig: appservice-slack
    spec:
      containers:
        - image: ''
          imagePullPolicy: Always
          name: appservice-slack
          volumeMounts:
          - mountPath: /config
            name: volume-config
          - mountPath: /matrix-appservice-slack/slack-registration.yaml
            subPath: slack-registration.yaml
            name: volume-slack-reg
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 9898
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: appservice-slack-config
        name: volume-config
      - configMap:
          defaultMode: 420
          name: matrix-configs
        name: volume-slack-reg
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - appservice-slack
        from:
          kind: ImageStreamTag
          name: 'appservice-slack:latest'
      type: ImageChange
    - type: ConfigChange
