manifests/appservice-slack/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
    service: appservice-slack
  name: appservice-slack
  namespace: synapse
spec:
  ports:
  - name: matrix-http
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: slack-http
    port: 9898
    protocol: TCP
    targetPort: 9898
  selector:
    deploymentconfig: appservice-slack
  sessionAffinity: None
  type: ClusterIP
