manifests/appservice-slack/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: synapse
    service: appservice-slack
  name: slack
  namespace: matrix
spec:
  host: slack-synapse.apps.vrutkovs-2.devcluster.openshift.com
  port:
    targetPort: 9898
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appservice-slack
    weight: 100
  wildcardPolicy: None
